# Fomodon

./: .gitignore  CMakeLists.txt  README.md
config/: FreeRTOSConfig.h  FreeRTOSIPConfig.h
src/: CMakeLists.txt  main.c
src/common/: CMakeLists.txt  freertos_hooks.c  sip_messages.c
src/common/include/: sip_messages.h
src/hal/: CMakeLists.txt
src/hal/RP2040/: hal.c
src/hal/RP2040/ENC28J60/: NetworkInterface.c
src/hal/include/: hal.h
test/: CMakeLists.txt  hal_stub.c  main.c  sip_messages_test.h
test/config/: SIPConfig.h
