if(${IS_TEST_BUILD})
    add_library(common_dep INTERFACE)
    target_link_libraries(common_dep INTERFACE $<COMPILE_ONLY:freertos_kernel>)
    target_link_libraries(common_dep INTERFACE $<COMPILE_ONLY:freertos_plus_tcp>)
    target_link_libraries(common_dep INTERFACE $<COMPILE_ONLY:hal>)
    set(COMMON_DEP common_dep)
else()
    set(COMMON_DEP freertos_plus_tcp hal)
endif()

file(GLOB COMMON_SOURCES "*.c")
add_library(common STATIC ${COMMON_SOURCES})
target_include_directories(common PUBLIC "include")
target_link_libraries(common PRIVATE ${COMMON_DEP})